# svgit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
bgremove/: Cargo.toml
bgremove/src/: lib.rs
bgremove/tests/: inference.rs
edgenet/: Cargo.toml
edgenet/src/: lib.rs
edgenet/tests/: inference.rs
pipeline/src/: curvefit.rs  gradient.rs  lib.rs  refine.rs  simplify.rs  svg.rs  trace.rs
scripts/: fetch-models.sh
service/: Cargo.toml
service/src/: main.rs
service/static/: index.html
